--- a/dungeon/src/App.css
+++ b/dungeon/src/App.css
@@ -61,6 +61,7 @@ body {
 .boss {
   position: absolute;;
   background-color: pink;
+  border:1px solid red;
 }
 .board {
   background-color: black;
