--- a/dungeon/src/App.css
+++ b/dungeon/src/App.css
@@ -63,6 +63,10 @@ body {
   background-color: pink;
   border:1px solid red;
 }
+.gate {
+  position: absolute;
+  background-color: purple;
+}
 .board {
   background-color: black;
   position: relative;
